Fixed the text from being cut off. It was a side-effect of the "overflow: hidden" attribute

--- a/app/guid-file/styles.scss
+++ b/app/guid-file/styles.scss
@@ -24,6 +24,7 @@
     overflow: hidden;
     white-space: nowrap;
     max-width: 70vw;
+    height: 40px;
 }
 
 .ProjectLink {
